--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.mail.username=1873745535@qq.com
 spring.mail.protocol=smtps
 spring.mail.password=srtghfpwyapubicb
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+
+spring.redis.database=12
+spring.redis.host=localhost
+spring.redis.port=6379
