--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,9 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 spring.redis.database=12
 spring.redis.host=localhost
 spring.redis.port=6379
+
+# 静态文件请求匹配方式
+#spring.mvc.static-path-pattern=/**
+# 修改默认的静态寻址资源目录
+spring.resources.static-locations= classpath:/templates/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+
