--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
+                    <compilerArgument>-parameters</compilerArgument>
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
@@ -122,6 +123,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
