--- a/src/main/resources/application-linux.properties
+++ b/src/main/resources/application-linux.properties
@@ -26,10 +26,14 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 spring.mail.host=smtp.qq.com
 spring.mail.username=1873745535@qq.com
 spring.mail.protocol=smtps
-spring.mail.password=srtghfpwyapubicb
+spring.mail.password=djfqoswbhrjxibad
 spring.mail.properties.mail.smtp.ssl.enable=true
 
 
 spring.redis.database=12
 spring.redis.host=localhost
 spring.redis.port=6379
+
+epidemicmanage.idlocal = http://101.35.88.72
+epidemicmanage.tupianpath = /root/
+spring.resources.static-locations= classpath:/templates/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
