--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,13 @@ mybatis.mapper-locations=classpath:epidemicMapper/*.xml
 mybatis.type-aliases-package=com.hfz.epidemicmanage.Entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
+mybatis.configuration.use-actual-param-name=true
+
 
 spring.mail.host=smtp.qq.com
 spring.mail.username=1873745535@qq.com
 spring.mail.protocol=smtps
-spring.mail.password=srtghfpwyapubicb
+spring.mail.password=djfqoswbhrjxibad
 spring.mail.properties.mail.smtp.ssl.enable=true
 
 
@@ -28,6 +30,11 @@ spring.redis.database=12
 spring.redis.host=localhost
 spring.redis.port=6379
 
+#logging.level.com.nowcoder.community=debug
+#logging.file=d:/work/data/epidemic.log
+
+epidemicmanage.idlocal = http://localhost:8080
+epidemicmanage.tupianpath = H:/epidemicmanage/
 # 静态文件请求匹配方式
 #spring.mvc.static-path-pattern=/**
 # 修改默认的静态寻址资源目录
